--- a/curriculum-vitae/publications.bib
+++ b/curriculum-vitae/publications.bib
@@ -1,17 +1,120 @@
-@online{RRCNJanus,
-Author = {Nairhita Samanta and Rohit Goswami and Rajarshi Chakrabarti},
-Title = {Diffusion of self-propelled Janus tracer in polymeric environment},
-Year = {2017},
-Eprint = {1704.06207},
-Eprinttype = {arXiv},
-keywords = {preprint}
+@article{GoswamiJCIM2020,
+  author          = {Goswami, Rohit and Goswami, Amrita and Singh, Jayant Kumar},
+  title           = {d-SEAMS: Deferred Structural Elucidation Analysis for
+                  Molecular Simulations},
+  journal         = {Journal of Chemical Information and Modeling},
+  year            = 2020,
+  month           = 3,
+  day             = 20,
+  publisher       = {American Chemical Society},
+  abstract        = {Structural analyses are an integral part of computational
+                  research on nucleation and supercooled water, whose accuracy
+                  and efficiency can impact the validity and feasibility of such
+                  studies. The underlying molecular mechanisms of these often
+                  elusive and computationally expensive processes can be
+                  inferred from the evolution of ice-like structures, determined
+                  using appropriate structural analysis techniques. We present
+                  d-SEAMS, a free and open-source post-processing engine for the
+                  analysis of molecular dynamics trajectories, which is
+                  specifically able to qualitatively classify ice structures, in
+                  both strong confinement and bulk systems. For the first time,
+                  recent algorithms for confined ice structure determination
+                  have been implemented, along with topological network criteria
+                  for bulk ice structure determination. We also propose and
+                  validate a new order parameter for identifying the building
+                  blocks of quasi-two-dimensional ice. Recognizing the need for
+                  customization in structural analysis, d-SEAMS has a unique
+                  code architecture, built with nix, employing a YAML-Lua
+                  scripting pipeline. The software has been designed to be
+                  user-friendly and extensible. The engine outputs are
+                  compatible with popular graphics software suites, allowing for
+                  immediate visual insights into the systems studied. We
+                  demonstrate the features of d-SEAMS by using it to analyze
+                  nucleation in the bulk regime and for quasi-one and
+                  quasi-two-dimensional systems. Structural time evolution and
+                  quantitative metrics are determined for heterogenous ice
+                  nucleation on a silver-exposed b-AgI surface, homogenous ice
+                  nucleation, flat monolayer square ice formation and freezing
+                  of an ice nanotube.},
+  issn            = {1549-9596},
+  doi             = {10.1021/acs.jcim.0c00031},
+  archivePrefix   = {arXiv},
+  eprint          = {1909.09830},
+  eprinttype      = {arxiv},
+  keywords        = {journal}
 }
 
-@article{RDGos,
-author = {Goswami, R. and Goswami, D.},
-title = {{Quantum Distributed Computing with Shaped Laser Pulses.}},
-journal = {13th International Conference on Fiber Optics and Photonics},
-year = {2016},  
-doi = {10.1364/photonics.2016.w4c.3},
-keywords = {conference}
+@article{GoswamiJPCC2020,
+  author          = {Goswami, Amrita and Singh, Jayant K.},
+  title           = {Exploring the Anomalous Phase Behavior of High-Pressure
+                  Ices in Diamond Confinement},
+  journal         = {The Journal of Physical Chemistry C},
+  volume          = 124,
+  number          = 9,
+  pages           = {5460-5468},
+  year            = 2020,
+  keywords        = {journal},
+  doi             = {10.1021/acs.jpcc.9b11531},
+  URL             = { https://doi.org/10.1021/acs.jpcc.9b11531 },
+  eprint          = { https://doi.org/10.1021/acs.jpcc.9b11531 }
+}
+
+@article{GoswamiTopo2020,
+  author          = "Goswami, Amrita and Singh, Jayant K.",
+  title           = "A general topological network criterion for exploring the
+                  structure of icy nanoribbons and monolayers",
+  journal         = "Phys. Chem. Chem. Phys.",
+  year            = 2020,
+  volume          = 22,
+  issue           = 7,
+  pages           = "3800-3808",
+  publisher       = "The Royal Society of Chemistry",
+  doi             = "10.1039/C9CP04902A",
+  url             = "http://dx.doi.org/10.1039/C9CP04902A",
+  keywords        = {journal},
+  abstract        = "We develop intuitive metrics for quantifying complex
+                  nucleating systems under confinement. These are shown to arise
+                  naturally from the analysis of the topological ring network{,}
+                  and are amenable for use as order parameters for such systems.
+                  Drawing inspiration from qualitative visual inspection{,} we
+                  introduce a general topological criterion for elucidating the
+                  ordered structures of confined water{,} using a graph
+                  theoretic approach. Our criterion is based on primitive
+                  rings{,} and reinterprets the hydrogen-bond-network in terms
+                  of these primitives. This approach has no a priori
+                  assumptions{,} except the hydrogen bond definition{,} and may
+                  be used as an exploratory tool for the automated discovery of
+                  new ordered phases. We demonstrate the versatility of our
+                  criterion by applying it to analyse well-known monolayer ices.
+                  Our methodology is then extended to identify the building
+                  blocks of one-dimensional n-sided prismatic nanoribbon ices.",
+}
+
+@online{gos2020prlarxiv,
+  Author          = {Amrita Goswami and Indranil Saha Dalal and Jayant K. Singh},
+  Title           = {Seeding Method For Ice Nucleation Under Shear},
+  Year            = 2020,
+  Eprint          = {2006.14919},
+  Eprinttype      = {arXiv},
+  keywords        = {preprint}
+}
+
+@INPROCEEDINGS{gosURSI19,
+  author          = {Rohit Goswami and Amrita Goswami and Debabrata Goswami},
+  booktitle       = {2019 URSI Asia-Pacific Radio Science Conference (AP-RASC)},
+  title           = {Space Filling Curves: Heuristics For Semi Classical Lasing
+                  Computations},
+  year            = 2019,
+  pages           = {1-4},
+  abstract        = {For semi classical lasing, the FDTD (finite difference time
+                  domain) formulation including nonlinearities is often used. We
+                  determine the computational efficiency of such schemes
+                  quantitatively and present a hueristic based on space filling
+                  curves to minimize complexity. The sparse matrix kernel is
+                  shown to be optimized by the utilization of Bi-directional
+                  Incremental Compressed Row Storage (BICRS). Extensions to high
+                  performance clusters and parallelization are also derived.},
+  keywords        = {conference},
+  doi             = {10.23919/URSIAP-RASC.2019.8738612},
+  month           = 3,
 }
