tex: Include publications

--- a/curriculum-vitae/cv.tex
+++ b/curriculum-vitae/cv.tex
@@ -312,6 +312,22 @@ Scale=MatchLowercase]{MyriadPro}
 % \cventry{\textsc{2014}}{Resonance Short Story Competition}{Harcourt Butler Technological Institute, Kanpur}{First Prize}{}{}
 
 \spacesection
+\section{Publications}
+ {\color{color1}\textsc{Journals}}
+
+\nocite{*}
+\printbibliography[heading=none, env=midbib, keyword=journal]
+
+{\color{color1}\textsc{Conference Proceedings}}
+
+\nocite{*}
+\printbibliography[heading=none, env=midbib, keyword=conference]
+
+% Currently none which haven't been published
+{\color{color1}\textsc{Preprints}}
+
+\nocite{*}
+\printbibliography[heading=none, env=midbib, keyword=preprint]
 
 \section{Conference Records}
 % \subsection{Posters}
