Added awards, and nixed HBTI stuff. TODO: remove volunteer work?

--- a/curriculum-vitae/cv.tex
+++ b/curriculum-vitae/cv.tex
@@ -308,7 +308,8 @@ Scale=MatchLowercase]{MyriadPro}
 \spacesubsection
 \subsection{Awards}
 \spacesubsection
-\cventry{\textsc{March 2014}}{Resonance Short Story Competition}{Harcourt Butler Technological Institute, Kanpur}{First Prize}{}{}
+\cventry{\textsc{7-9 November 2019}}{Physical Chemistry Chemical Physics Poster Prize}{DAE Computational Chemistry Symposium, BARC, India}{A Family of General Topological Network Criteria for Confined Ice Structure Determination}{}{}
+\cventry{\textsc{21-23 February 2019}}{Springer Poster Award}{Molecular Simulations of Complex Fluids and Interfaces, IIT Kanpur}{Formulation and Implementation of General Topological Network Criteria for Exploring the Structures of Confined Ice}{}{}
 % \cventry{\textsc{2014}}{Resonance Short Story Competition}{Harcourt Butler Technological Institute, Kanpur}{First Prize}{}{}
 
 \spacesection
