--- a/curriculum-vitae/publications.bib
+++ b/curriculum-vitae/publications.bib
@@ -9,7 +9,7 @@
   pages           = "3800-3808",
   publisher       = "The Royal Society of Chemistry",
   doi             = "10.1039/C9CP04902A",
-  url             = "http://dx.doi.org/10.1039/C9CP04902A",
+  % url             = "http://dx.doi.org/10.1039/C9CP04902A",
   keywords        = {journal},
   abstract        = "We develop intuitive metrics for quantifying complex
                   nucleating systems under confinement. These are shown to arise
@@ -86,7 +86,7 @@
   year            = 2020,
   keywords        = {journal},
   doi             = {10.1021/acs.jpcc.9b11531},
-  URL             = { https://doi.org/10.1021/acs.jpcc.9b11531 },
+  % URL             = { https://doi.org/10.1021/acs.jpcc.9b11531 },
   eprint          = { https://doi.org/10.1021/acs.jpcc.9b11531 }
 }
 
@@ -100,7 +100,7 @@
   year            = 2020,
   keywords        = {journal},
   doi             = {10.1063/5.0021206},
-  URL             = { https://doi.org/10.1063/5.0021206 },
+  % URL             = { https://doi.org/10.1063/5.0021206 },
   eprint          = { 2006.14919 }
 }
 
@@ -135,7 +135,7 @@
 
 @INPROCEEDINGS{gosACStopo2019,
   author          = {Amrita Goswami and Jayant K. Singh},
-  booktitle       = {ACS Spring 2020 National Meeting & Expo},
+  booktitle       = {ACS Spring 2020 National Meeting \& Expo},
   title           = {General topological network criteria and implementation for monolayers and ice nanotubes},
   year            = 2020,
   abstract        = {We present a family of general topological criteria, for the determination of structures of quasi-one-dimensional and quasi-two-dimensional ices. Confined systems are characterized by a plethora of diverse ordered structures and interesting hydrogen-bond-networks (HBNs), distinct from those formed in the bulk. Our methodology has no a-priori assumptions, and can be used as an exploratory tool for probing confined ice structures. In our recipe, primitive rings are identified, and further, only connections corresponding to hydrogen bonds are permitted. The prism identification scheme developed identifies prismatic units, which are the building blocks of ice nanotubes (INTs). In addition, we formulate novel and intuitive order parameters based on our topological network criteria, which are able to qualitatively and accurately describe phase transitions.We have subsumed this methodology into a framework developed for the analysis of Molecular Simulations. The software framework is powered by our FOSS engine, d-SEAMS (deferred Structural Elucidation Analysis of Molecular Simulations). The ability to extend trivially, with best practices, our software is demonstrated by our ability to rapidly implement algorithms, like the graph theoretical structure families above. Our engine is intuitive to work with and abstracts away from the user much of the repetitive tooling which is part of every molecular simulation analysis to allow the researcher to focus on results. Among other features, d-SEAMS is able to classify ice structures across all scales, from nanoscale confinement to bulk. d-SEAMS has a unique work-flow, designed to be simultaneously customizable and easy-to-use. d-SEAMS is built reproducibly with nix, using deterministic cryptographic hashes for the dependency build graph. Lua-scripting and YAML inputs enable users to specify pre-defined work-flows and variables respectively. The outputs produced by d-SEAMS are consumable by popular graphics software suites, for immediate visual insights into the systems studied.},
