coursework in three lines only

--- a/curriculum-vitae/cv.tex
+++ b/curriculum-vitae/cv.tex
@@ -328,7 +328,8 @@ Scale=MatchLowercase]{MyriadPro}
 {\color{color1}\textsc{Preprints}}
 
 \nocite{*}
-\printbibliography[heading=none, env=midbib, keyword=preprint, resetnumbers=true]
+\printbibliography[heading=none, env=midbib, keyword=preprint] % without numbering
+% \printbibliography[heading=none, keyword=preprint, resetnumbers=false] % with numbering
 
 {\color{color1}\textsc{Conference Proceedings}}
 
@@ -356,7 +357,7 @@ Scale=MatchLowercase]{MyriadPro}
 \section{Relevant Coursework}
 \cventry{\textsc{2017 Spring}}{Molecular Modelling In Chemistry}{CHM695}{\textsc{Instructor: } Prof. Nisanth Nair}{\bfseries{Grade: A$^{*}$}}{}
 \cventry{\textsc{2017 Fall}}{Intermolecular and Surface Forces}{CHE625A}{\textsc{Instructor: } Prof. Animangsu Ghatak}{\bfseries{Grade: A}}{}
-\cventry{\textsc{2016 Spring}}{Introduction To Molecular Simulations}{CHE622A}{\textsc{Instructor: } Prof. Martin Horsch}{\bfseries{Grade: B}}{}
+\cventry{\textsc{2016 Spring}}{Introduction to Molecular Simulations}{CHE622A}{\textsc{Instructor: } Prof. Martin Horsch}{\bfseries{Grade: B}}{}
 
 \spacesection
 \section{Miscellaneous}
