tiny grammatical error

--- a/curriculum-vitae/cv.tex
+++ b/curriculum-vitae/cv.tex
@@ -370,7 +370,7 @@ Scale=MatchLowercase]{MyriadPro}
 
 \cventry{\textsc{2017--2018}}{ChemE Research Scholar Day}{Indian Institute of Technology, Kanpur}{}{Anchor}{Managed and spearheaded the festivities of the research oriented student presentations and posters.}
 
-\cventry{\textsc{February 2019}}{FunMolSim Workshop}{Indian Institute of Technology, Kanpur}{Organizer}{Helped organize, designed and taught tutorials at an pedagogical workshop for molecular dynamics}{}
+\cventry{\textsc{February 2019}}{FunMolSim Workshop}{Indian Institute of Technology, Kanpur}{Organizer}{Helped organize, designed and taught tutorials at a pedagogical workshop for molecular dynamics}{}
 
 \cventry{\textsc{2017--2020}}{Animal Welfare Group}{Indian Institute of Technology, Kanpur}{}{Member}{Rescued and fostered stray and injured animals.}
 
