cv: Updated date

--- a/curriculum-vitae/cv.tex
+++ b/curriculum-vitae/cv.tex
@@ -239,6 +239,12 @@ Scale=MatchLowercase]{MyriadPro}
 %===========================
 \begin{document}
 
+% Adapted from https://tex.stackexchange.com/a/170219/130845
+\begin{tikzpicture}[remember picture,overlay]
+      \node[anchor=north, yshift=-0.25cm] at (current page.north) {\underline{Last
+		  updated on \today}};
+\end{tikzpicture}
+
 \maketitle
 
 \section{Personal Data}
