CV: Update grants and publications

--- a/curriculum-vitae/publications.bib
+++ b/curriculum-vitae/publications.bib
@@ -9,7 +9,6 @@
   pages           = "3800-3808",
   publisher       = "The Royal Society of Chemistry",
   doi             = "10.1039/C9CP04902A",
-  % url             = "http://dx.doi.org/10.1039/C9CP04902A",
   keywords        = {journal},
   abstract        = "We develop intuitive metrics for quantifying complex
                   nucleating systems under confinement. These are shown to arise
@@ -69,9 +68,6 @@
                   of an ice nanotube.},
   issn            = {1549-9596},
   doi             = {10.1021/acs.jcim.0c00031},
-  archivePrefix   = {arXiv},
-  eprint          = {1909.09830},
-  eprinttype      = {arxiv},
   keywords        = {journal}
 }
 
@@ -86,8 +82,6 @@
   year            = 2020,
   keywords        = {journal},
   doi             = {10.1021/acs.jpcc.9b11531},
-  % URL             = { https://doi.org/10.1021/acs.jpcc.9b11531 },
-  eprint          = { https://doi.org/10.1021/acs.jpcc.9b11531 }
 }
 
 @article{GoswamiJCP2020,
@@ -100,18 +94,76 @@
   year            = 2020,
   keywords        = {journal},
   doi             = {10.1063/5.0021206},
-  % URL             = { https://doi.org/10.1063/5.0021206 },
-  eprint          = { 2006.14919 }
 }
 
-@online{gos2020prlarxiv,
-  Author          = {Amrita Goswami and Indranil Saha Dalal and Jayant K. Singh},
-  Title           = {Universal Nucleation Behaviour of Sheared Systems},
-  Year            = 2020,
-  Eprint          = {2011.01020},
-  Eprinttype      = {arXiv},
-  keywords        = {preprint}
+@article{Goswami2021,
+  title = {A Hybrid Topological and Shape-Matching Approach for Structure Analysis},
+  author = {Goswami, Amrita and Singh, Jayant K.},
+  date = {2021-04},
+  journaltitle = {The Journal of Chemical Physics},
+  volume = {154},
+  number = {15},
+  pages = {154502},
+  publisher = {{AIP Publishing}},
+  keywords  = {journal},
+  doi = {10.1063/5.0046419}
 }
+
+@article{Goswami2021a,
+  title = {Universal Nucleation Behavior of Sheared Systems},
+  author = {Goswami, Amrita and Dalal, Indranil Saha and Singh, Jayant K.},
+  date = {2021-05},
+  journaltitle = {Physical Review Letters},
+  volume = {126},
+  number = {19},
+  pages = {195702},
+  publisher = {{American Physical Society (APS)}},
+  keywords  = {journal},
+  doi = {10.1103/physrevlett.126.195702}
+}
+
+@article{goswamiHomogeneousNucleationSheared2021,
+  title = {Homogeneous Nucleation of Sheared Liquids: Advances and Insights from Simulations and Theory},
+  shorttitle = {Homogeneous Nucleation of Sheared Liquids},
+  author = {Goswami, Amrita and Singh, Jayant K.},
+  date = {2021-07-28},
+  journaltitle = {Physical Chemistry Chemical Physics},
+  shortjournal = {Phys. Chem. Chem. Phys.},
+  volume = {23},
+  number = {29},
+  pages = {15402--15419},
+  publisher = {{The Royal Society of Chemistry}},
+  issn = {1463-9084},
+  keywords  = {journal},
+  doi = {10.1039/D1CP02617H},
+  abstract = {One of the most ubiquitous and technologically important phenomena in nature is the nucleation of homogeneous flowing systems. The microscopic effects of shear on a nucleating system are still imperfectly understood, although in recent years a consistent picture has emerged. The opposing effects of shear can be split into two major contributions for simple atomic and molecular liquids: increase of the energetic cost of nucleation, and enhancement of the kinetics. In this perspective, we describe the latest computational and theoretical techniques which have been developed over the past two decades. We collate and unify the overarching influences of shear, temperature, and supersaturation on the process of homogeneous nucleation. Experimental techniques and capabilities are discussed, against the backdrop of results from simulations and theory. Although we primarily focus on simple systems, we also touch upon the sheared nucleation of more complex systems, including glasses and polymer melts. We speculate on the promising directions and possible advances that could come to fruition in the future.},
+  langid = {english}
+}
+
+@article{kSaltWaterSystemDiamond2021,
+  title = {Salt-{{Water System}} under {{Diamond Confinement}}},
+  author = {K, Suraj and Goswami, Amrita and Singh, Jayant K.},
+  date = {2021-10-14},
+  journaltitle = {The Journal of Physical Chemistry C},
+  shortjournal = {J. Phys. Chem. C},
+  volume = {125},
+  number = {40},
+  pages = {22283--22294},
+  publisher = {{American Chemical Society}},
+  issn = {1932-7447},
+  keywords  = {journal},
+  doi = {10.1021/acs.jpcc.1c06410},
+  abstract = {Deriving inspiration from the salinity of ice VII inclusions in excavated diamonds, we explore the phase behavior of quasi-two-dimensional salt water in diamond nanoconfinement via molecular dynamics simulations. We construct the compression-limit phase diagram for several slit widths over a wide range of gigapascal-high lateral pressures. We observe the assembly of solid-like amorphous monolayer, bilayer, and trilayer phases, distinct from the ordered structures found in both pure bulk water and quasi-two-dimensional confined water. The underlying mechanism of dehydration, caused by the disruptive presence of ions, and the concomitant destruction of the long-range order of the encapsulating water hydrogen-bond network are critically analyzed. Orientational analyses of the constrained salt-water system reveal ties to interlayer water hydrogen bonding and the preferential arrangement of ion and water layers. Our results offer fresh insight into the formation and structural characteristics of the phases exhibited by nanoconfined salt water.}
+}
+
+% @online{gos2020prlarxiv,
+%   Author          = {Amrita Goswami and Indranil Saha Dalal and Jayant K. Singh},
+%   Title           = {Universal Nucleation Behaviour of Sheared Systems},
+%   Year            = 2020,
+%   Eprint          = {2011.01020},
+%   Eprinttype      = {arXiv},
+%   keywords        = {preprint}
+% }
 
 @INPROCEEDINGS{gosURSI19,
   author          = {Rohit Goswami and Amrita Goswami and Debabrata Goswami},
