--- a/curriculum-vitae/cv.tex
+++ b/curriculum-vitae/cv.tex
@@ -320,6 +320,11 @@ Scale=MatchLowercase]{MyriadPro}
 
 \cventry{\textsc{2019--present}}{PeerJ-Computer Science}{Reviewer}{}{}{}
 
+% GRANTS
+\spacesection{}
+\section{Grants Awarded}
+\cventry{\textsc{2020--2023}}{Icelandic Research Fund}{Rannís}{11.550 thousand ISK}{Post Doctoral Fellowship}{\textsc{Title: }Modeling of transport and crystal nucleation in aqueous ionic solutions under shear.}
+
 % PUBLICATIONS
 \spacesection
 \section{Publications}
@@ -331,7 +336,7 @@ Scale=MatchLowercase]{MyriadPro}
 
 
 % Currently none which haven't been published
-{\color{color1}\textsc{Preprints}}
+% {\color{color1}\textsc{Preprints}}
 
 \nocite{*}
 \printbibliography[heading=none, env=midbib, keyword=preprint] % without numbering
