TEX: Update details

--- a/curriculum-vitae/cv.tex
+++ b/curriculum-vitae/cv.tex
@@ -49,10 +49,10 @@
  \geometry{
  a4paper,
  %total={210mm,297mm},
- left=15mm,
- right=15mm,
- top=15mm,
- bottom=10mm,
+ left=10mm,
+ right=10mm,
+ top=10mm,
+ bottom=08mm,
  }
 
 % required when changing page layout lengths
@@ -221,8 +221,8 @@ Scale=MatchLowercase]{MyriadPro}
 % I use the extrainfo command for additional information, since I 
 % want to use custom icons and have finer control over spacing.
 \extrainfo{
-	\faPhone\hspace{0.3em}+91 8874170409\\
-	{\small\faEnvelope}\hspace{0.3em}amritag@iitk.ac.in\\
+	\faPhone\hspace{0.3em}+91 7518713673\\
+	{\small\faEnvelope}\hspace{0.3em}amrita@hi.is\\
 	{\small\faGithub}\hspace{0.3em}amritagos\\
 	\faGlobe\hspace{0.3em}https://github.com/amritagos/
 }
@@ -252,7 +252,12 @@ Scale=MatchLowercase]{MyriadPro}
 \cvitem{Date Of Birth}{16.08.1991}
 %\cvitem{Geburtsort}{Petrovichi, Russia}
 
-\spacesection
+\spacesection{}
+\section{Work Experience}
+
+\cventry{\textsc{2021--present}}{Science Institute}{University of Iceland}{}{Rannís Research Fund PostDoctoral Fellow}{Principal investigator for the project on ``Modeling of transport and crystal nucleation in aqueous ionic solutions under shear''.}
+
+\spacesection{}
 \section{Education}
 \cventry{\textsc{2016--present}}{MS-Ph.D. Chemical Engineering}{Indian Institute of Technology}{Kanpur}{\emph{India}}{$8.75$ CGPA (\textsc{Advisor: } Prof. Jayant K. Singh; \textsc{Co-Advisor: } Prof. Indranil Saha Dalal)}
 %\cventry{\textsc{1939--1941}}{M.Sc. Chemistry}{University Extension}{New York}{\emph{United States}}{}
@@ -323,7 +328,7 @@ Scale=MatchLowercase]{MyriadPro}
 % GRANTS
 \spacesection{}
 \section{Grants Awarded}
-\cventry{\textsc{2020--2023}}{Icelandic Research Fund}{Rannís}{11.550 thousand ISK}{Post Doctoral Fellowship}{\textsc{Title: }Modeling of transport and crystal nucleation in aqueous ionic solutions under shear.}
+\cventry{\textsc{2020--2023}}{Icelandic Research Fund}{Rannís}{11550 thousand ISK}{Post Doctoral Fellowship}{\textsc{Title: }Modeling of transport and crystal nucleation in aqueous ionic solutions under shear.}
 
 % PUBLICATIONS
 \spacesection
