--- a/curriculum-vitae/cv.tex
+++ b/curriculum-vitae/cv.tex
@@ -206,9 +206,9 @@ Scale=MatchLowercase]{MyriadPro}
 
 % for the icons (telephone, globe). I found the icons provided by the
 % fontawesome package prettier than the standard moderncv icons.
-\defaultfontfeatures{
-    Path = Fonts/FontAwesome/ }
-\usepackage{fontawesome}
+% \defaultfontfeatures{
+%     Path = Fonts/FontAwesome/ }
+% \usepackage{fontawesome}
 
 % personal data
 \firstname{Amrita}
@@ -259,7 +259,7 @@ Scale=MatchLowercase]{MyriadPro}
 
 \spacesection{}
 \section{Education}
-\cventry{\textsc{2016--present}}{MS-Ph.D. Chemical Engineering}{Indian Institute of Technology}{Kanpur}{\emph{India}}{$8.75$ CGPA (\textsc{Advisor: } Prof. Jayant K. Singh; \textsc{Co-Advisor: } Prof. Indranil Saha Dalal)}
+\cventry{\textsc{2016--2021}}{MS-Ph.D. Chemical Engineering}{Indian Institute of Technology}{Kanpur}{\emph{India}}{$8.75$ CGPA (\textsc{Advisor: } Prof. Jayant K. Singh; \textsc{Co-Advisor: } Prof. Indranil Saha Dalal)}
 %\cventry{\textsc{1939--1941}}{M.Sc. Chemistry}{University Extension}{New York}{\emph{United States}}{}
 \cventry{\textsc{2012--2016}}{B.Tech. Chemical Engineering}{Harcourt Butler Technical University}{Kanpur}{\emph{India}}{$72.36\%$ First Division (\textsc{Project: } Sulphur Acid Production optimization via the Chamber Process)}
 \cventry{\textsc{2008--2010}}{Intermediate (AISSCE)}{The Jain International School}{Kanpur}{\emph{India}}{$85\%$ Central Board of Secondary Education (CBSE)}
