--- a/curriculum-vitae/cv.tex
+++ b/curriculum-vitae/cv.tex
@@ -250,7 +250,7 @@ Scale=MatchLowercase]{MyriadPro}
 \section{Personal Data}
 \cvitem{Name}{Amrita Goswami}
 \cvitem{Date Of Birth}{16.08.1991}
-%\cvitem{Geburtsort}{Petrovichi, Russia}
+\cvitem{New Jersey}{New York, USA}
 
 \spacesection{}
 \section{Work Experience}
@@ -302,6 +302,7 @@ Scale=MatchLowercase]{MyriadPro}
 \section{Accolades \& Affiliations}
 \subsection{Awards}
 \spacesubsection
+\cventry{\textsc{June 2022}}{Outstanding PhD Thesis Award}{Indian Institute of Technology Kanpur}{}{}{}
 \cventry{\textsc{November 2019}}{RSC Physical Chemistry Chemical Physics Poster Prize}{DAE Computational Chemistry Symposium, BARC, India}{}{}{}
 \cventry{\textsc{February 2020}}{Springer Poster Award}{Molecular Simulations of Complex Fluids and Interfaces, IIT Kanpur}{}{}{}
 \cventry{\textsc{November 2019}}{Hot PCCP Article}{}{Article selected as a '2019 HOT PCCP Article', and as an inside front cover}{}{}
@@ -309,8 +310,9 @@ Scale=MatchLowercase]{MyriadPro}
 \spacesubsection
 \subsection{Memberships}
 \spacesubsection
-\cventry{\textsc{2014--present}}{AIChE (American Institute Of Chemical Engineers)}{Student Member}{}{}{}
+\cventry{\textsc{2021--present}}{IOP (Institute of Physics)}{}{Member}{}{}
 \cventry{\textsc{2018--present}}{OSA (Optical Society of America)}{Student Member}{}{}{}
+\cventry{\textsc{2014--present}}{AIChE (American Institute Of Chemical Engineers)}{Student Member}{}{}{}
 
 \spacesection
 \section{Experience}
@@ -361,14 +363,14 @@ Scale=MatchLowercase]{MyriadPro}
 \subsection{Posters}
 \cventry{\textsc{7-9 November 2019}}{DAE Computational Chemistry Symposium, BARC}{Mumbai}{A Family of General Topological Network Criteria for Confined Ice Structure Determination}{}{}
 \cventry{\textsc{21-23 February 2020}}{Molecular Simulations of Complex Fluids and Interfaces}{IIT Kanpur}{Formulation and Implementation of General Topological Network Criteria for Exploring the Structures of Confined Ice}{}{}
-% \cventry{\textsc{March 2019}}{Space Filling Curves: Heuristics For Semi Classical Lasing Computations}{URSI Asia-Pacific Radio Science Conference (AP-RASC 2019)}{R. Goswami, A. Goswami, and D. Goswami}{}{}
-% \cventry{\textsc{December 2018}}{FDTD Numerical Computations for Ultrafast Non-linear Optics}{Photonics-2018}{R. Goswami, A. Goswami, and D. Goswami}{}{}
+\cventry{\textsc{March 2019}}{Space Filling Curves: Heuristics For Semi Classical Lasing Computations}{URSI Asia-Pacific Radio Science Conference (AP-RASC 2019)}{R. Goswami, A. Goswami, and D. Goswami}{}{}
+\cventry{\textsc{December 2018}}{FDTD Numerical Computations for Ultrafast Non-linear Optics}{Photonics-2018}{R. Goswami, A. Goswami, and D. Goswami}{}{}
 
 \spacesection
 \subsection{Attended}
-\cventry{\textsc{December 2017}}{RARE Symposium}{Agra}{}{}{}
-\cventry{\textsc{July 2019}}{Rare Events Summer School}{Indian Institute of Science, Bangalore}{A short course consisting of lectures and hands-on sessions by experts in the field, organized by Prof. Baron Peters}{}{}
 \cventry{\textsc{21 September 2019}}{OpenACC GPU Bootcamp}{Indian Institute of Technology, Kanpur}{Day long programming session and discussion covering the acceleration of Institute in-house code by a Senior NVIDIA Solution Architect}{}{}
+\cventry{\textsc{July 2019}}{Rare Events Summer School}{Indian Institute of Science, Bangalore}{A short course consisting of lectures and hands-on sessions by experts in the field, organized by Prof. Baron Peters}{}{}
+\cventry{\textsc{December 2017}}{RARE Symposium}{Agra}{}{}{}
 
 \section{Relevant Coursework}
 \cventry{\textsc{2017 Spring}}{Molecular Modelling In Chemistry}{CHM695}{\textsc{Instructor: } Prof. Nisanth Nair}{\bfseries{Grade: A$^{*}$}}{}
